// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Profiles /> renders the <Profile /> with populated data 1`] = `
<div
  class="profiles__Container-ty3dj-0 hHBybT"
>
  <h1
    class="profiles__Title-ty3dj-1 hCMVSW"
  >
    Who's Watching?
  </h1>
  <ul
    class="profiles__List-ty3dj-2 ciDniQ"
  >
    <li
      class="profiles__User-ty3dj-5 iceCBY"
    >
      <img
        class="profiles__Picture-ty3dj-3 gTICYw"
        data-testid="profile-picture"
        src="/images/users//images/cosmin.png.png"
      />
      <p
        class="profiles__Name-ty3dj-4 hlGzaj"
      >
        Cosmin Mihalache
      </p>
    </li>
  </ul>
   
</div>
`;

exports[`<Profiles /> renders the <Profiles /> with populated data but misc profile image 1`] = `
<div
  class="profiles__Container-ty3dj-0 hHBybT"
>
  <h1
    class="profiles__Title-ty3dj-1 hCMVSW"
  >
    Who's Watching?
  </h1>
  <ul
    class="profiles__List-ty3dj-2 ciDniQ"
  >
    <li
      class="profiles__User-ty3dj-5 iceCBY"
    >
      <img
        class="profiles__Picture-ty3dj-3 gTICYw"
        data-testid="profile-picture-misc"
        src="/images/misc/loading.gif"
      />
      <p
        class="profiles__Name-ty3dj-4 hlGzaj"
      >
        Cosmin Mihalache
      </p>
    </li>
  </ul>
   
</div>
`;
